apps/staging/nocodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb
  namespace: nocodb
spec:
  ingressClassName: traefik
  rules:
    - host: nocodb.justindesio.com
      http:
        paths:
          - backend:
              service:
                name: nocodb
                port:
                  number: 8080
            path: /
            pathType: Prefix
